--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 
 <head>
   <title>Snake Game by Evan Alioto</title>
-  <meta name="viewport" content="width=device-width, initial-scale=0.7, maximum-scale=1.0, user-scalable=no" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no" />
   <link href="https://fonts.googleapis.com/css?family=Antic+Slab" rel="stylesheet">
   <link href="./style.css" rel="stylesheet">
 
@@ -30,6 +30,20 @@
       transform: translate(-50%, -50%);
       z-index: 0;
       touch-action: none;
+    }
+
+    @media (max-width: 400px) {
+      #snakeboard {
+        width: 350px;
+        height:350px;
+      }
+    }
+
+    @media (max-width: 350px) {
+      #snakeboard {
+        width: 300px;
+        height:300px;
+      }
     }
 
     #score {
